css/frm_admin.css
/* ... */
.frm-dropdown-menu>.disabled>a,.frm-dropdown-menu>.disabled>a:hover,.frm-dropdown-menu>.disabled>a:focus{
	color:#999999;
}
.frm-dropdown-menu>.disabled>a:hover,
.frm-dropdown-menu>.disabled>a:focus{
    text-decoration:none;
    background-color:transparent;
    background-image:none;
    cursor:not-allowed;
}
.open>.frm-dropdown-menu{display:block;}
.open>a{outline:0;}
.dropdown-header{display:block;padding:3px 20px;font-size:12px;line-height:1.428571429;color:#999999;}
.dropdown-backdrop{position:fixed;left:0;right:0;bottom:0;top:0;z-index:990;}
.pull-right>.frm-dropdown-menu{right:0;left:auto;}
.navbar-fixed-bottom .dropdown .caret{border-top:0 dotted;border-bottom:4px solid #000000;content:"";}
.navbar-fixed-bottom .dropdown .frm-dropdown-menu{top:auto;bottom:100%;margin-bottom:1px;}
.btn{
	border: 1px solid #ddd;
	background:#fff;
	box-shadow:0 1px 2px rgba(0, 0, 0, 0.07) inset;
	height: 28px;
	line-height: 1.5;
}

a.frm-option-icon:before{
	color: #0073aa;
    font-size: 22px;
    width: 22px;
    height: 22px;
}

a.frm-option-icon:focus::before,
a.frm-option-icon:hover::before{
	color:#5b9dd9;
}

.frm_top_left .frm-dropdown-toggle{
	color:#999;
}

.frm-dropdown-toggle{
	text-decoration:none;
}

.frm_actions_dropdown .frm-dropdown-menu{
	font-size:14px;
	color:#5F6C72;
}

.frm-dropdown-menu .frm_icon_font{
	vertical-align: middle;
	color:#5F6C72;
	margin-right: 3px;
}

/* BS Multiselect */
.multiselect-container.frm-dropdown-menu{
	top:auto;
	left:auto;
	font-size:14px;
	padding-top:3px;
}

.accordion-container .frm-dropdown-menu{
    min-width:40px;
}
.accordion-container .frm-dropdown-menu:before,
.accordion-container .multiselect.dropdown-toggle:before{
    font-family:"s11-fp" !important;
}
.multiselect-container.frm-dropdown-menu input[type=radio]{
    display:none;
}
.multiselect-container{position:absolute;list-style-type:none;margin:0;padding:0}
.multiselect-container .input-group{margin:5px}
.multiselect-container>li{
	padding:0;
	margin:0;
}
.multiselect-container>li>a.multiselect-all label{font-weight:700}
.multiselect-container>li>label.multiselect-group{margin:0;padding:3px 20px;height:100%;font-weight:700}
.multiselect-container>li>a{padding:0}
.multiselect-container>li>a>label{margin:0;height:100%;cursor:pointer;font-weight:400;padding:3px 20px;}
.accordion-container .multiselect-container > li > a > label{
    padding:3px 19px 3px 7px;
}
.multiselect-container>li>a>label.radio,
.multiselect-container>li>a>label.checkbox{margin:0}
.multiselect-container>li>a>label>input[type=checkbox]{margin-bottom:5px}
.frm-btn-group.btn-group>.btn-group:nth-child(2)>.multiselect.btn{border-top-left-radius:4px;border-bottom-left-radius:4px}
.form-inline .multiselect-container label.checkbox,
.form-inline .multiselect-container label.radio{padding:3px 20px;}
.form-inline .multiselect-container li a label.checkbox input[type=checkbox],
.form-inline .multiselect-container li a label.radio input[type=radio]{
	margin-left:-20px;margin-right:0;
}
.frm-btn-group.btn-group, .frm-btn-group.btn-group-vertical {
    display: inline-block;
    position: relative;
    vertical-align: middle;
}

.frm_scale{text-align:center;float:left;margin-right:10px;}
.frm_scale input{display:block;margin:5px}

.frm_multi_fields_container{
	float:left;
}
.frm_multi_fields_container,
.frm_form_builder .frm_form_fields input[type=range],
.frm_form_builder .frm_form_fields input[type="text"]{
	width:100%;
	max-width:400px;
    height:auto;
}

.frm_form_fields .frm_form_field > textarea,
.frm_form_fields .frm_form_field > input[type=email],
.frm_form_fields .frm_form_field > input[type=url],
.frm_form_fields .frm_form_field > input[type=number],
.frm_form_fields .frm_form_field > input[type=tel],
.frm_form_fields .frm_form_field > input[type=text],
.frm_form_fields .frm_form_field > input[type=range]{
	width:100%;
}

.frm_form_fields textarea.wp-editor-area{width:100%;border:none;}
.frm_form_fields input[type="file"], .frm_form_fields input[type="file"]:disabled{
	background:transparent;
	border:none;
	box-shadow:none;
	width:auto;
}
.frm_form_fields select{width:auto;}
input[type="radio"],
input[type="checkbox"]{
	width:16px;
	padding:0;
}
.frm_catlevel_2, .frm_catlevel_3, .frm_catlevel_4, .frm_catlevel_5{margin-left:18px;}
.frm_form_fields input.auto_width, .frm_form_fields select.auto_width, .frm_form_fields textarea.auto_width{width:auto;}

.frm_form_fields input:focus, .frm_form_fields select:focus,
.frm_form_fields textarea:focus, .frm_focus_field input{background-color:#fff;border-color:#ddd;}

.frm_radio,
.frm_checkbox{
	display:block;
}
.frm_radio label,
.frm_checkbox label{
	font-size:12px;
	color:#302c3f;
	font-weight:normal;
	display:inline;
}
.frm_radio input[type="radio"],
.frm_checkbox input[type="checkbox"]{
	margin-right:5px;
	width:auto;
}

.frm_inner_field_container {
	margin-bottom:10px;
}

.frm_conf_inline .frm_inner_field_container,
.frm_conf_inline .frm_inner_conf_container{
	width:192px;
	float:left;
}
.frm_conf_inline .frm_inner_field_container{
	margin-right:16px;
	clear:both;
}
.frm_conf_inline .frm_inner_field_container .frm-show-click a,
.frm_conf_below .frm_conf_field_container .frm-show-click a{
	display:none !important;
}
.frm_conf_below .frm_conf_field_container{
	margin-top:10px;
}

.frm_calc_dec{
	width:50px;
}

.frm_form_fields div.star{
    height:auto;
    left:auto;
    top:auto;
    letter-spacing:normal;
    position:static;
}
.frm_form_fields div.star a, .frm_form_fields div.star a:hover, .frm_form_fields div.star a:visited{position:static;right:auto;}

.frm_ext_sc{display:none;}
.frm_long_input{
    width: 100% !important;
    box-sizing: border-box;
}

img.frm_help{
	margin-left:2px;
	vertical-align:middle;
	padding-bottom:2px;
}

.frm-loading-img{
	background:url(../images/ajax_loader.gif) no-repeat center center;
	padding:6px 12px;
	visibility:hidden;
}
.frm_spinner.spinner{
	float:left;
}

.frm_visible_spinner.spinner{
	visibility:visible;
	float:none;
}
/* ... */

